@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-30T00:43:45Z",
+  "timestamp" : "2023-08-30T08:12:23Z",
   "count_outdated" : 2794,
   "uniques_outdated" : 1113,
-  "count" : 2804,
-  "uniques" : 1120,
+  "count" : 2805,
+  "uniques" : 1121,
   "clones" : [
     {
       "timestamp": "2023-08-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -61,6 +61,15 @@
     },
     {
       "timestamp": "2023-08-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-30T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
