@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-08-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2023-08-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-30T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
